# PascalBasedCompiler

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LRParser.cpp  LRParser.h  OperatorPrecedenceParser.cpp  OperatorPrecedenceParser.h  README-assignment2.md  README.md  READ_ME.txt  astparsetree.h  build.sh  countEights-symbols.txt  errorhandler.h  followsets.h  instruction.h  lexicalscanner.cpp  lexicalscanner.h  parsetree.h  record.h  simple-states.txt  symboltable.cpp  symboltable.h  syntaxanalyzer.cpp  syntaxanalyzer.h  tabletopdownsyntaxanalyzer.cpp  tabletopdownsyntaxanalyzer.h  tempTest.txt  test.sh  test.txt  test2.sh  tester.cpp  testswhile-states.txt  token.cpp  token.h  tokenizer  tokenizer.cpp  tokenizer.h  tokenizer_checker.cpp  tokenizer_checker.h  (+3 more)
tests/: complicated_input.txt  conditional.txt  countEights_expected.txt  declarations.txt  expression.txt  floats.txt  floats_expected.txt  ic.txt  ic2.txt  ifwhilesample.txt  lexicalerror.txt  lr-error.txt  lr-table.txt  operators.txt  quadratic.txt  quadratic_expected.txt  sample.txt  sample_expected.txt  sample_output.txt  simple.txt  simple_expected.txt  simple_not_expected.txt  simple_output.txt  simple_test.txt  some_tests.txt  syntaxerror.txt  table.txt  types-bad-assignment.txt  types-bad-expression.txt  types.txt  undefined.txt  while.txt
